2005-03-09  John W. Eaton  <jwe@octave.org>

	* examples/Makefile.in (bin-dist): Delete target.
	(BINDISTFILES): Delete variable.
	* emacs/Makefile.in: Likewise.

	* octMakefile.in (VERSION, ARCH, binary-dist): Delete targets.
	(XBINDISTFILES, BINDISTFILES, BINDISTSUBDIRS): Delete variables.

2005-03-04  John W. Eaton  <jwe@octave.org>

	* configure.in (GXX_PICKY_FLAGS): Don't include
	-Wmissing-prototypes or -Wstrict-prototypes.

2005-03-02  John W. Eaton  <jwe@octave.org>

	* aclocal.m4 (OCTAVE_CC_FLAG, OCTAVE_CXX_FLAG, OCTAVE_F77_FLAG):
	Use AC_LINK_IFELSE instead of AC_TRY_LINK.

	* configure.in (OCTAVE_LOCAL_BUFFER): Use < T > instead of <T>.
	From Clinton Chee <chee@parallel.hpc.unsw.edu.au>.

2005-03-01  John W. Eaton  <jwe@octave.org>

	* configure.in (AC_CONFIG_FILES): Remove libcruft/odessa/Makefile
	from the list.

2005-03-01  Todd Neal  <tolchz@gmail.com>

	* examples/make_int.cc: DEFINE_OV_TYPEID_FUNCTIONS_AND_DATA now
	takes three arguments.

	* octMakefile.in (SUBDIRS, CLEANSUBDIRS):
	Remove @GLOB_DIR@ from the list.

2005-02-28  John W. Eaton  <jwe@octave.org>

	* octMakefile.in (DISTDIRS): Remove glob from the list.
	(dist): No need to clean up in glob subdirectory.
	* glob: Delete directory.
	* Makeconf.in (GLOB_INCFLAGS, LIBGLOB): Delete.
	(do-subst-config-vals): Don't substitute them.
	(INCFLAGS): Remove $(GLOB_INCFLAGS) from the list.
	* configure.in: Don't test for glob or fnmatch.

2005-02-22  Shan G. Smith  <shan@cybertrails.com>

	* mkoctfile.in: If not linking, then use output file name
	specified with -o.

2005-02-21  John W. Eaton  <jwe@octave.org>

	* texi2dvi: Delete our private version.

	* Makeconf.in (MAKEINFO): Define.
	(TEXI2DVI): Define as texi2dvi, not $(top_srcdir)/texi2dvi.

2005-02-09  John W. Eaton  <jwe@octave.org>

	* configure.in: Check for canonicalize_file_name and resolvepath.

2005-02-02  John W. Eaton  <jwe@octave.org>

	* config.guess, config.sub: Update from FSF sources.

2005-01-18  John W. Eaton  <jwe@octave.org>