@@ -1,3 +1,8 @@
+2005-03-10  John W. Eaton  <jwe@octave.org>
+
+	* toplev.cc (Foctave_config_info): Print error instead of crashing
+	if struct does not contain field we are looking for.
+
 2005-03-09  John W. Eaton  <jwe@octave.org>
 
 	* load-save.cc (Fload, Fsave): Accept -text as an alias for -ascii.
